fix navbar wrap for smaller screens

--- a/src/app/date-selector/date-selector.component.css
+++ b/src/app/date-selector/date-selector.component.css
@@ -54,7 +54,6 @@
 
 .small-font {
     font-size: 10px;
-    letter-spacing: 1px;
 }
 
 .sm-text {
